--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -139,9 +139,11 @@
                                                                                                 aria-hidden="true"></i><a
                                             href="/help/faq" class="link">FAQ</a></span></li>
                                     <div class="delimiter"></div>
+                                    {{#ifneq this.currentRole "Schüler"}}
                                     <li class="list-group-item list-group-item-action"><span><i class="fa fa-pencil"
                                                                                                 aria-hidden="true"></i></i>
-                                        <a href="#" class="link submit-helpdesk">Feedback</a></span></li>
+                                        <a href="#" class="link submit-helpdesk">Eine User-Story eingeben</a></span></li>
+                                    {{/ifneq}}
                                     <li class="list-group-item list-group-item-action"><span><i class="fa fa-comment"
                                                                                                 aria-hidden="true"></i></i>
                                         <a href="#" class="link submit-problem">Ein Problem melden</a></span></li>
@@ -211,11 +213,6 @@
                     </div>
                 </div>
             </div>
-
-            <a class="submit-helpdesk hide-inline">
-                {{#embed "lib/components/feedback-button"}}
-                {{/embed}}
-            </a>
 
             {{#embed "lib/components/modal-form" class="feedback-modal"}}
                 {{#content "fields"}}
