--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -66,23 +66,7 @@
                             <div class="tasks row card-deck-row">
                                 {{#each homeworks}}
                                     {{#each this}}
-                                        <div class="col-md-4 col-sm-6 col-xs-12">
-                                            <div class="card h-100">
-                                                <div class="card-block homework">
-                                                    <div class="card-text">
-                                                        <small class="text-muted">Fällig: {{timeFromNow dueDate}}</small>
-                                                    </div>
-
-                                                    <div class="card-text"><strong>{{#if courseId}}<span style="color:{{color}}">●</span> [{{courseId.name}}] {{/if}}{{name}}</strong></div>
-                                                    <div class="card-text description">
-                                                        {{{truncateHTML (conflictFreeHtml description)}}}
-                                                    </div>
-                                                </div>
-                                                <div class="card-footer">
-                                                    <a class="btn btn-primary btn-block" href="{{url}}">Zur Aufgabe</a>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        {{> 'homework/components/dashboard_card_template'}}
                                     {{/each}}
                                 {{/each}}
                             </div>
@@ -97,23 +81,7 @@
                             <div class="row tasks card-deck-row">
                                 {{#each myhomeworks}}
                                     {{#each this}}
-                                        <div class="col-md-4 col-sm-6 col-xs-12">
-                                            <div class="card h-100">
-                                                <div class="card-block homework">
-                                                    <div class="card-text">
-                                                        <small class="text-muted">Fällig: {{timeFromNow dueDate}}</small>
-                                                    </div>
-
-                                                    <div class="card-text"><strong>{{#if courseId}}<span style="color:{{color}}">●</span> [{{courseId.name}}] {{/if}}{{name}}</strong></div>
-                                                    <div class="card-text description">
-                                                        {{{truncateHTML (conflictFreeHtml description)}}}
-                                                    </div>
-                                                </div>
-                                                <div class="card-footer">
-                                                    <a class="btn btn-primary btn-block" href="{{url}}">Zur Aufgabe</a>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        {{> 'homework/components/dashboard_card_template'}}
                                     {{/each}}
                                 {{/each}}
                             </div>
