button layout changed + tooltips

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -22,6 +22,16 @@
 
             <div class="row">
                 <div class="col-sm-6">
+                    {{#userHasPermission "COURSE_EDIT"}}
+                        <a href="/courses/{{../_id}}/topics/add" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="Thema hinzufügen">
+                            <i class="fa fa-plus" aria-hidden="true"></i>
+                            <span class="hidden-lg-down">Thema hinzufügen</span>
+                        </a>
+                        <a href="#" data-courseId="{{../_id}}" class="btn btn-secondary btn-sm pull-right ml-1 btn-import-topic" data-toggle="tooltip" title="Thema importieren">
+                            <i class="fa fa-exchange" aria-hidden="true"></i>
+                            <span class="hidden-lg-down">Thema importieren</span>
+                        </a>
+                    {{/userHasPermission}}
                     <h4>Themen</h4>
 
                     <div class="list-group">
@@ -86,20 +96,14 @@
                                 <span>Keine Themen.</span>
                             </p>
                         {{/if}}
-                        {{#userHasPermission "COURSE_EDIT"}}
-                            <a href="/courses/{{../_id}}/topics/add" class="btn btn-secondary margin-top">
-                                <i class="fa fa-plus" aria-hidden="true"></i>
-                                Thema hinzufügen
-                            </a>
-                            <a href="#" data-courseId="{{../_id}}" class="btn btn-secondary margin-top btn-import-topic">
-                                <i class="fa fa-exchange" aria-hidden="true"></i>
-                                Thema importieren
-                            </a>
-                        {{/userHasPermission}}
                     </div>
                 </div>
 
                 <div class="col-sm-6">
+                    {{#userHasPermission "COURSE_EDIT"}}
+                        <a href="/courses/{{../_id}}/tools/add" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="Neues Tool hinzufügen">
+                            <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Neues Tool hinzufügen</span></a>
+                    {{/userHasPermission}}
                     <h4>Tools</h4>
 
                     <div class="list-group">
@@ -134,16 +138,14 @@
                         {{/if}}
                     </div>
 
-                    {{#userHasPermission "COURSE_EDIT"}}
-                        <a href="/courses/{{../_id}}/tools/add" class="btn btn-secondary margin-top">
-                            <i class="fa fa-plus" aria-hidden="true"></i>  Neues Tool hinzufügen</a>
-                    {{/userHasPermission}}
                 </div>
             </div>
             <hr/>
             <div class="row">
                 <div class="col-sm-6">
                     <div class="container-fluid">
+                        <a href="/homework/new?course={{../_id}}" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="Aufgabe hinzufügen">
+                            <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Aufgabe hinzufügen</span></a>
                         <div class="row">
                             <h4>Gestellte Aufgaben</h4>
                         </div>
@@ -154,12 +156,12 @@
                                 {{/each}}
                             </div>
                         </ol>
-                        <a href="/homework/new?course={{../_id}}" class="btn btn-secondary margin-top">
-                            <i class="fa fa-plus" aria-hidden="true"></i> Neue Aufgabe</a>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="container-fluid">
+                        <a href="/homework/new?course={{../_id}}&private=true" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="private Aufgabe hinzufügen">
+                            <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> private Aufgabe hinzufügen</span></a>
                         <div class="row">
                             <h4>Meine Aufgaben</h4>
                         </div>
@@ -170,8 +172,6 @@
                                 {{/each}}
                             </div>
                         </ol>
-                        <a href="/homework/new?course={{../_id}}&private=true" class="btn btn-secondary margin-top">
-                            <i class="fa fa-plus" aria-hidden="true"></i> Neue private Aufgabe</a>
                     </div>
                 </div>
             </div>
