ready for styling

--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -7,6 +7,21 @@
     {{#content "page"}}
         <section class="faqpanel">
             <div class="container-fluid">
+                <div class="row" style="padding-bottom: 20px">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="card h-100">
+                            <div class="card-block">
+                                <div class="card-text">
+                                    <h4 class="card-title">Problem melden</h4>
+                                    <p class="card-text">Sie haben ein Problem mit der Schul-Cloud? Schreiben Sie uns doch!</p>
+                                </div>
+                            </div>
+                            <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
+                                <a href="#" class="btn btn-primary submit-problem">Problem melden</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="row">
                             <div class="col-md-4 col-sm-6 col-xs-12">
                                 <div class="card h-100">
@@ -31,12 +46,12 @@
                                     </div>
                                     <div class="card-block">
                                         <div class="card-text">
-                                            <h4 class="card-title">Problem melden</h4>
-                                            <p class="card-text">Sie haben ein Problem mit der Schul-Cloud? Schreiben Sie uns doch!</p>
+                                            <h4 class="card-title">Häufig gestellte Fragen zum Thema SSO</h4>
+                                            <p class="card-text">Eine Allgemeine Erläuterung zum Thema SSO und weitere Fragen</p>
                                         </div>
                                     </div>
                                     <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
-                                        <a href="#" class="btn btn-primary submit-problem">Problem melden</a>
+                                        <a href="/help/faq/sso" class="btn btn-primary">Zu den Fragen</a>
                                     </div>
                                 </div>
                             </div>
@@ -47,15 +62,43 @@
                                     </div>
                                     <div class="card-block">
                                         <div class="card-text">
-                                            <h4 class="card-title">Fact Sheet</h4>
-                                            <p class="card-text">Gucken Sie doch unser Fact Sheet an und finden Sie heraus was die Schul-Cloud ist und was sie nicht ist.</p>
+                                            <h4 class="card-title">Anleitung zur Verwaltung von Lehrkräften und Schülern</h4>
+                                            <p class="card-text">Hier wird Ihnen im einzelnen erklärt wie Sie vorgehen können um weitere Personen zur Schul-Cloud einzuladen.</p>
                                         </div>
                                     </div>
                                     <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
-                                        <a href="/vendor/fact-sheet.pdf" target="_blank" class="btn btn-primary">Fact Sheet ansehen</a>
+                                        <a href="/help/faq/administration" class="btn btn-primary">Zur Erklärung</a>
                                     </div>
                                 </div>
                             </div>
+                </div>
+                <div class="row" style="padding-top: 20px">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <div class="card h-100">
+                            <div class="card-block">
+                                <div class="card-text">
+                                    <h4 class="card-title">Fact Sheet</h4>
+                                    <p class="card-text">Gucken Sie doch unser Fact Sheet an und finden Sie heraus was die Schul-Cloud ist und was sie nicht ist.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
+                                <a href="/vendor/fact-sheet.pdf" target="_blank" class="btn btn-primary">Fact Sheet ansehen</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <div class="card h-100">
+                            <div class="card-block">
+                                <div class="card-text">
+                                    <h4 class="card-title">Schul-Cloud MOOC</h4>
+                                    <p class="card-text">Um Sie bei Ihren ersten Klicks in der Schul-Cloud zu begleiten, haben wir einen MOOC-Kurs zusammengestellt und auf der etablierten Bildungsplattform openHPI für Sie als ausgewählte Pilotschulen bereitgestellt. Er soll Sie durch die Schul-Cloud lotsen und Sie bei der Testung der Schul-Cloud mit verschiedenen Videosequenzen unterstützen.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
+                                <a href="https://open.hpi.de/courses/schulcloud2017" target="_blank" class="btn btn-primary">Zum openHPI Kurs</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
