--- a/views/courses/forms/form-import-topic.hbs
+++ b/views/courses/forms/form-import-topic.hbs
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label for="invitation">Fügen Sie hier einen Link ein, den Sie von einem Lehrer-Kollegen erhalten haben.</label>
+    <label for="invitation">Fügen Sie hier einen Code ein, den Sie von einem Lehrer-Kollegen erhalten haben.</label>
     <input class="form-control" name="shareToken" type="text" />
     <input class="form-control" hidden name="courseId" />
 </div>
