--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -32,6 +32,9 @@
 
     .card-topic {
         cursor: pointer;
+        .card-header {
+            padding:.5rem .75rem;
+        }
         .btn-hidden-toggle {
             font-size: 20px;
         }
@@ -40,12 +43,16 @@
             line-height: 50px;
             padding-right: 20px;
         }
-        .delete-topic {
-            line-height: 50px;
-        }
         .input-group-btn {
             padding-right: 10px;
             float: right;
+        }
+        .input-group{
+            align-items: center;
+        }
+        .right-btn-group{
+            margin-left:auto;
+            white-space: nowrap;
         }
     }
 
