--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -50,6 +50,12 @@
   .img-out {
     padding-top: 20px;
     display: inline-block;
+
+    .fa-bug {
+      font-size: 140px;
+      padding-top: 50px;
+      padding-bottom: 40px
+    }
   }
 
   padding-bottom: 20px;
