--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -16,7 +16,7 @@
                                     <div class="card-block">
                                         <div class="card-text">
                                             <h4 class="card-title">Häufig gestellte Fragen</h4>
-                                            <p class="card-text">Hier werden die meistgefragten Fragen zu dem Thema Schul-Cloud beantwortet.</p>
+                                            <p class="card-text">Hier finden Sie Antworten auf häufig gestellte Fragen rund zum Thema Schul-Cloud.</p>
                                         </div>
                                     </div>
                                     <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
@@ -31,12 +31,12 @@
                                     </div>
                                     <div class="card-block">
                                         <div class="card-text">
-                                            <h4 class="card-title">Problem melden</h4>
-                                            <p class="card-text">Sie haben ein Problem mit der Schul-Cloud? Schreiben Sie uns doch!</p>
+                                            <h4 class="card-title">SSO in der Schul-Cloud</h4>
+                                            <p class="card-text">Hier finden Sie Erläuterungen zum SSO generell sowie zum SSO in der Schul-Cloud.</p>
                                         </div>
                                     </div>
                                     <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
-                                        <a href="#" class="btn btn-primary submit-problem">Problem melden</a>
+                                        <a href="/help/faq/sso" class="btn btn-primary">Zu den Fragen</a>
                                     </div>
                                 </div>
                             </div>
@@ -47,15 +47,49 @@
                                     </div>
                                     <div class="card-block">
                                         <div class="card-text">
-                                            <h4 class="card-title">Fact Sheet</h4>
-                                            <p class="card-text">Gucken Sie doch unser Fact Sheet an und finden Sie heraus was die Schul-Cloud ist und was sie nicht ist.</p>
+                                            <h4 class="card-title">Anleitung zur Verwaltung von Lehrkräften und Schülern und Schülerinnen</h4>
+                                            <p class="card-text">Hier finden Sie Erklärungen zum Anlegen und zur allgemeinen Verwaltung von Schülern und Schülerinnen und Lehrkräften.</p>
                                         </div>
                                     </div>
                                     <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
-                                        <a href="/vendor/fact-sheet.pdf" target="_blank" class="btn btn-primary">Fact Sheet ansehen</a>
+                                        <a href="/help/faq/administration" class="btn btn-primary">Zur Erklärung</a>
                                     </div>
                                 </div>
                             </div>
+                </div>
+                <div class="row" style="padding-top: 20px">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <div class="card h-100">
+                            <div class="img-out">
+                                <i class="fa fa-bug card-img-top circular" aria-hidden="true"></i>
+                            </div>
+                            <div class="card-block">
+                                <div class="card-text">
+                                    <h4 class="card-title">Problem melden</h4>
+                                    <p class="card-text">Sie haben ein Problem in der Schul-Cloud gefunden? Schreiben Sie uns doch! Für Ihre Hinweise sind wir dankbar!</p>
+                                </div>
+                            </div>
+                            <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
+                                <a href="/vendor/fact-sheet.pdf" target="_blank" class="btn btn-primary submit-problem">Problem melden</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <div class="card h-100">
+                            <div class="img-out">
+                                <img class="card-img-top circular" src="https://hpi.de/fileadmin/user_upload/hpi/bilder/teaser_news/2013/open_hpi_logo_400x300__08.jpg" alt="Card image cap">
+                            </div>
+                            <div class="card-block">
+                                <div class="card-text">
+                                    <h4 class="card-title">Schul-Cloud MOOC</h4>
+                                    <p class="card-text">Um Sie bei Ihren ersten Klicks in der Schul-Cloud zu begleiten, haben wir einen MOOC-Kurs zusammengestellt und auf der etablierten Bildungsplattform openHPI für Sie als ausgewählte Pilotschulen bereitgestellt. Er soll Sie durch die Schul-Cloud lotsen und Sie bei der Testung der Schul-Cloud mit verschiedenen Videosequenzen unterstützen.</p>
+                                </div>
+                            </div>
+                            <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
+                                <a href="https://open.hpi.de/courses/schulcloud2017" target="_blank" class="btn btn-primary">Zum openHPI Kurs</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
