--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -7,6 +7,7 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/jquery/jquery-ui.min.js" type="text/javascript" defer></script>
+        <script src="/scripts/jquery/jquery.ui.touch-punch.js" type="text/javascript" defer></script>
         <script src="/scripts/courses.js" type="text/javascript" defer></script>
     {{/content}}
 
@@ -30,7 +31,8 @@
                             <div id="topic-list">
                             {{#each lessons}}
                                 {{#unless this.hidden}}
-                                    <div class="card card-topic" onclick="location.href='{{this.url}}'">
+                                    <div class="card card-topic" onclick="location.href='{{this.url}}'" 
+                                    {{#userHasPermission "COURSE_EDIT"}}data-topicId="{{../_id}}"{{/userHasPermission}}>
                                         <div class="card-header">
                                             <div class="input-group">
                                                 {{#userHasPermission "COURSE_EDIT"}}
@@ -53,13 +55,9 @@
                                                             redirect="/courses/{{../courseId}}">
                                                             <i class="fa fa-trash-o"></i>
                                                         </a>
-                                                        <a class="btn btn-secondary btn-sm btn-hidden-toggle"
+                                                        <a class="btn btn-secondary btn-sm move-handle"
                                                             href="{{../_id}}">
-                                                             <i class="fa fa-arrow-circle-o-down"></i>
-                                                        </a>
-                                                        <a class="btn btn-secondary btn-sm btn-hidden-toggle"
-                                                            href="{{../_id}}">
-                                                             <i class="fa fa-arrow-circle-o-up"></i>
+                                                             <i class="fa fa-arrows"></i>
                                                         </a>
                                                     </div>
                                                 {{/userHasPermission}}
@@ -68,25 +66,32 @@
                                     </div>
                                 {{else}}
                                     {{#userHasPermission "COURSE_EDIT"}}
-                                        <div class="card card-topic" onclick="location.href='{{../url}}'">
+                                        <div class="card card-topic" onclick="location.href='{{this.url}}'" 
+                                        data-topicId="{{../_id}}">
                                             <div class="card-header">
                                                 <div class="input-group">
-                                                        <a
-                                                            class="btn btn-secondary btn-sm btn-hidden-toggle"
-                                                            href="{{../_id}}"
-                                                            data-toggle="tooltip"
-                                                            title="{{#if ../hidden}}Thema sichtbar machen{{else}}Thema verstecken{{/if}}">
-                                                             <i class="fa fa-eye{{#if ../hidden}}-slash{{/if}}"></i>
-                                                        </a>
-                                                    <p class="topic-label">{{../name}}</p>
-                                                    <a class="delete-topic"
-                                                       href="/courses/{{../courseId}}/topics/{{../_id}}"
-                                                       target="_blank"
-                                                       data-method="delete-material"
-                                                       data-name="{{../name}}"
-                                                       redirect="/courses/{{../courseId}}">
-                                                        <i class="fa fa-trash-o"></i>
+                                                    <a 
+                                                        class="btn btn-secondary btn-sm btn-hidden-toggle"
+                                                        href="{{../_id}}"
+                                                        data-toggle="tooltip"
+                                                        title="Thema sichtbar machen">
+                                                        <i class="fa fa-eye-slash"></i>
                                                     </a>
+                                                    <p class="topic-label ml-1">{{this.name}}</p>
+                                                    <div class="right-btn-group">
+                                                        <a class="delete-topic btn btn-sm"
+                                                           href="/courses/{{../courseId}}/topics/{{../_id}}"
+                                                           target="_blank"
+                                                           data-method="delete-material"
+                                                           data-name="{{../name}}"
+                                                            redirect="/courses/{{../courseId}}">
+                                                            <i class="fa fa-trash-o"></i>
+                                                        </a>
+                                                        <a class="btn btn-secondary btn-sm move-handle"
+                                                            href="{{../_id}}">
+                                                             <i class="fa fa-arrows"></i>
+                                                        </a>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
