--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -21,6 +21,8 @@
                 {{/if}}
 
                 <input name="courseId" type="hidden" data-force-value="true" value="{{courseId}}" />
+                
+                <input name="position" type="hidden" data-force-value="true" value="{{lesson.position}}" />
 
                 <div class="form-group">
                     <label>Titel des Themas</label>
